# musicmashup_website

./: .replit  audio_processor.py  bpm_detection.py  package-lock.json  package.json  pyproject.toml  replit.nix  stem_separator.py  theme.json
attached_assets/: Pasted--import-pandas-as-pd-import-numpy-as-np-import-matplotlib-pyplot-as-plt-from-setuptools-command--1739911979451.txt  Pasted-Audio-Mashup-Creator-A-Web-Based-Tool-for-Seamless-Music-Mixing-Overview-Audio-Mashup-Creator-is-a-1739902757487.txt  bpm_detection.py  music_merge.py
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: accessibility-bar.tsx  animated-background.tsx  audio-upload.tsx  mixer.tsx  nav-bar.tsx  responsive-background.tsx  waveform.tsx
client/src/hooks/: use-audio-analysis.ts  use-theme.tsx
client/src/pages/: about.tsx  bpm-detection.tsx  help.tsx  home.tsx  login.tsx  pricing.tsx  products.tsx  trending.tsx  vocal-remover.tsx
server/: index.ts  routes.ts  storage.ts
shared/: schema.ts
